# InnovateXNiet

./: .env.example  .gitignore  DEPLOYMENT.md  context.md  fix_slide2.py  pyproject.toml  render.yaml  slide2_concept_v2.html
app/: __init__.py  main.py  schemas.py
artifacts/: MODEL_CARD.md  slide2_concept.html  slide2_diagram_preview.html  slide2_user_flow.drawio  training_report.json  trust_model.joblib  work_experience_wanderer_style_prompts.md
docs/: coding-harness-integration.md  ml_model_research.md  production-assessment-integrity-plan.md
frontend_original/: .env.local.example  eslint.config.mjs  package-lock.json  package.json
tests/: test_api_health.py  test_assessment_attempts_api.py  test_assessment_integrity_api.py  test_assessment_plan_api.py  test_auth_tokens_api.py  test_authz_api.py  test_backend_product_completeness_api.py  test_coding_harness_api.py  test_db_bootstrap.py  test_employability_pipeline_api.py  test_frontend_github_session_recovery.py  test_github_project_generation_api.py  test_gpu_training_config.py  test_institution_analytics_api.py  test_job_matching_api.py  test_product_flow.py  test_question_bank_api.py  test_resume_evidence_api.py  test_roadmap_progression_api.py  test_scoring_flow_api.py  test_skill_gap_roadmap_api.py  test_student_intake_api.py  test_training_suite_summary.py  test_trust_model.py  test_trust_stamp_api.py
trust_ml/: __init__.py  cli.py  datasets.py  demo_data.py  external_data.py  features.py  intake.py  model.py  roadmap.py  roles.py  schemas.py  surfaces.py  training.py  verification.py
(+81 files in other folders)
