[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-ml"
version = "0.1.0"
description = "ML-first trust model prototype for placement readiness scoring."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "python-multipart>=0.0.20",
  "scikit-learn>=1.5",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
  "xgboost>=2.0",
]

[tool.setuptools.packages.find]
include = ["trust_ml*", "app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
